# buaa-portal-login

./: Cargo.toml
reference/: srun_login.js
src/: config.rs  logger.rs  main.rs
