[package]
name = "buaa-portallogin"
version = "0.1.0"
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
reqwest = "0.9"
indicatif = "0.12"
crossterm = "0.11"
structopt = "0.3"
once_cell = "1.2"
